# pyecwid

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: python-package.yml  python-publish.yml
pyecwid/: __init__.py  ecwidapi.py  ecwidapi_mock.py  ecwidutils.py
pyecwid/endpoints/: __init__.py  coupons.py  customers.py  endpoint.py  orders.py  products.py  producttypes.py
pyecwid/endpoints/mixins/: __init__.py  add.py  delete.py  endpoint_mixin.py  get_all.py  get_by_id.py  get_by_keyword.py  get_by_params.py  update.py
pyecwid/validators/: __init__.py  paramater_validators.py
samples/: README.md  sample_fn_helpers.py
tests/: test_ecwid_endpoint_coupons.py  test_ecwid_endpoint_customers.py  test_ecwid_endpoint_products.py  test_ecwid_endpoint_producttypes.py  test_ecwidapi.py  test_pyecwid.py
tests/samplejson/: coupon.json  customer.json  product.json  producttype.json
