[metadata]
name = pyecwid
version = 0.0.1
author = Dan Palmer
author_email = ecwid@danpalmz.com
description = An interface to the Ecwid shopping platform API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanPalmz/pyecwid
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6